--- a/Home.css
+++ b/Home.css
@@ -261,7 +261,7 @@
   font-family: Poppins;
   width: 394px;
   font-weight: 700;
-  margin: 3px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-2 .u-video-1 {
